--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <li><a href="#youtube" title="Youtube">Youtube</a></li>
               <li><a href="#mods" title="Mods Minecraft">Mods Minecraft</a></li>
               <li><a href="#modsfnf" title="Mods FNF">Mods FNF</a></li>
+              <li><a href="https://linfoxgamer.github.io/projetobrasil" title="Projeto Brasil">Projeto Brasil</a></li>
             </ul>
             <i class="ion-android-menu nav-toggle"></i>
           </div>
