--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
         <ul>
           <li><a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg" title="Youtube" target="_blank">Youtube</a></li>
           <li><a href="https://github.com/linfoxgamer" title="Github" target="_blank">Github</a></li>
+          <li><a href="https://twitter.com/linfoxgamer" title="Twitter" target="_blank">Twitter</a></li>
+          <li><a href="https://www.planetminecraft.com/member/lin_fox/" title="PlanetMinecraft" target="_blank">PlanetMinecraft</a></li>
           <li><a href="https://www.curseforge.com/members/linfoxgamer/projects" title="Curse Forge">Curse forge</a></li>
         </ul>
       </div>
