--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <p>Criador de Mods para Minecraft e FNF</p>
       </div>
       <div class="col span_1_of_3 box">
-        <h4>need a server?</h4>
-          <li><a href="https://scalacube.com/p/_hosting_server_minecraft/2397124" title="click here" target="_blank">click here</a></li>
+        <h4>Need a Minecraft Server?</h4>
+          <li><a href="https://scalacube.com/p/_hosting_server_minecraft/2397124" title="Click Here!" target="_blank">click here</a></li>
       </div>
       <div class="col span_1_of_3 box">
         <h4>Links</h4>
