--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
       <div class="col span_1_of_3 box">
         <h4>Need a Minecraft Server?</h4>
-          <li><a href="https://scalacube.com/p/_hosting_server_minecraft/2397124" img src="imgs/scalacube.jpeg" class="imagem"></a></li>
+          <li><a href="https://scalacube.com/p/_hosting_server_minecraft/2397124”><img src="imgs/scalacube.jpeg" class="imagem"></a></li>
       </div>
       <div class="col span_1_of_3 box">
         <h4>Links</h4>
